--- a/app/src/main/res/layout/activity_notificacoes_user.xml
+++ b/app/src/main/res/layout/activity_notificacoes_user.xml
@@ -9,17 +9,20 @@
     tools:openDrawer="start">
 
     <!-- Content Frame -->
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <!-- Header with gradient background -->
         <RelativeLayout
             android:id="@+id/header"
-            android:layout_width="match_parent"
-            android:layout_height="113dp"
+            android:layout_width="412dp"
+            android:layout_height="118dp"
             android:background="@drawable/tab"
-            android:padding="16dp">
+            android:padding="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <!-- User Profile Picture -->
             <ImageView
@@ -42,16 +45,14 @@
                 android:layout_height="25dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="40dp"
-                android:src="@drawable/menu"/>
+                android:src="@drawable/menu" />
         </RelativeLayout>
 
         <!-- List of Items -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_queimadas"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="110dp"
-            android:layout_marginBottom="90dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/header"
             app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,13 +61,17 @@
         <!-- Bottom Navigation -->
         <RelativeLayout
             android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="92dp"
-            android:layout_alignParentBottom="true"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
             android:background="@color/white"
             android:elevation="8dp"
             android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+            android:paddingBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent">
 
             <!-- Notification Icon -->
             <ImageView
@@ -96,7 +101,7 @@
                 android:layout_marginEnd="16dp"
                 android:src="@drawable/ic_profile" />
         </RelativeLayout>
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Navigation Drawer -->
     <com.google.android.material.navigation.NavigationView
@@ -106,5 +111,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:menu="@menu/drawer_menu" />
+
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
